tweak to Wrong/Correct message visibility

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,3 @@
 body {
     background-color: gainsboro;
 }
-
-.navbar {
-    background-color: whitesmoke;
-}
